# Objektinis-programavimas-3

./: CMakeLists.txt  README.md  Setup.msi  V1.5.cpp  V1.5.vcxproj  klaidos.cpp  klaidos.h  listai.cpp  listai.h  lstudentas.cpp  lstudentas.h  studentas.cpp  studentas.h  testavimas.cpp  testavimas.h  vektoriai.cpp  vektoriai.h  zmogus.cpp  zmogus.h
