cmake_minimum_required(VERSION 3.10)

project(V1.5 VERSION 1.5)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(V1.5 V1.5.cpp klaidos.h listai.h lstudentas.h studentas.h testavimas.h vektoriai.h zmogus.h klaidos.cpp listai.cpp lstudentas.cpp studentas.cpp testavimas.cpp vektoriai.cpp zmogus.cpp)
